# waffle

./: .gitignore  CMakeLists.txt  todo.md
src/: client.cpp  client.h  packets.h  server.cpp
src/client/: Game.cpp  Game.hpp  GameScene.cpp  GameScene.hpp  InputManager.cpp  InputManager.hpp  MainMenuScene.cpp  MainMenuScene.hpp  NetworkClient.cpp  NetworkClient.hpp  Player.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.hpp  SceneContext.hpp  client.cpp  client.hpp
src/server/: server.cpp  server.hpp
src/shared/: ENetHostWrapper.cpp  ENetHostWrapper.hpp  packets.hpp  util.cpp  util.hpp
